--- a/JDC/smsjdc/public/css/style.css
+++ b/JDC/smsjdc/public/css/style.css
@@ -755,7 +755,7 @@ textarea.form-control {
 
   /* Dark Mode Toggle Mobile */
   .dark-mode-toggle {
-    bottom: 90px; /* Au-dessus de la barre de navigation */
+    bottom: 100px; /* Au-dessus de la barre de navigation */
     left: 15px;
     width: 50px;
     height: 50px;
